# AirQuality

./: .gitmodules  README.md
.github/workflows/: server-deployment.yaml
app/: .gitignore  README.md  env.xcconfig.example
app/AirQuality/: AirQualityApp.swift  ContentView.swift  Info.plist
app/AirQuality.xcodeproj/: project.pbxproj
app/AirQuality/Environments/: UiState.swift
app/Shared/: DataController.swift
app/WidgetExtension/: Info.plist  WidgetExtension.entitlements  WidgetExtension.swift
device/: .gitignore  .gitmodules  CMakeLists.txt  README.md  flash.sh  main.cpp  main_old.cpp
device/config/: FreeRTOSConfig.h  bluetooth_gatt_config.gatt  btstack_config.h  lwipopts.h  mongoose_config.h  options.h  options.h.example
device/src/: AirQuality.cpp  AirQuality.h  Application.cpp  Application.h  CMakeLists.txt
device/src/Network/: Bluetooth.cpp  Bluetooth.h  DHCPServer.cpp  DHCPServer.h  HTTPClient.cpp  HTTPClient.h  HTTPServer.cpp  HTTPServer.h  Network.cpp  Network.h  WebSocketServer.cpp  WebSocketServer.h
device/src/Tasks/: FreeRTOSTask.cpp  FreeRTOSTask.h  ManagerTask.cpp  ManagerTask.h
device/src/Tasks/Pairing/: BluetoothPairingTask.cpp  BluetoothPairingTask.h  PairingWebServerTask.cpp  PairingWebServerTask.h
device/src/Tasks/Regular/: LogSensorDataTask.cpp  LogSensorDataTask.h  WebSocketTask.cpp  WebSocketTask.h
device/src/Tasks/Sensors/: SensorCalibrationTask.cpp  SensorCalibrationTask.h  SensorUpdateTask.cpp  SensorUpdateTask.h
device/src/Tasks/Utils/: BlinkLedTask.cpp  BlinkLedTask.h  ResetButtonTask.cpp  ResetButtonTask.h  ResourcesTask.cpp  ResourcesTask.h  TimedCommandTask.cpp  TimedCommandTask.h
device/src/Utils/: Flash.cpp  Flash.h  Utils.cpp  Utils.h
enclosure/: Case.stl  Cover.stl  Enclosure.f3d  README.md
server/: README.md  deploy.php
server/bootstrap/: app.php
server/routes/: api.php
(+72 files in other folders)
